--- a/animationtask.css
+++ b/animationtask.css
@@ -1,18 +1,66 @@
-*{
+body{
     background-color: black;
-}
-
-button{
-    border: 10px solid red;
-    border-radius: 12px;
+    height: 100vh;
+    display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .box{
+    width: 300px;
+    height: 300px;
+    border: 5px solid;
+    border-radius: 10px;
+    display: flex;
     justify-content: center;
-    width: 200px;
-    height: 200px;
-    border: 8px solid yellow;
-    text-shadow: 2px 2px 2px 2px;
+    align-items: center;
+    animation-name: border-task;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    border: none;
+    animation-direction: alternate;
+    
+
+
+}
+button{
+    padding:  8px 15px;
+    font-size:16px ;
+    height: 42px;
+    color: black;
+    background-color: white;
+    border: 5px solid;
+    border-radius: 20px;
+    animation-name: border-task;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    border: none;
+    animation-direction: alternate;
+    
+    
+
+}
+
+@keyframes border-task {
+    0%{
+    border-color: red;
+    box-shadow: 0px 0px 20px 5px red;
+    }
+    25%{border-color: yellow;
+    box-shadow: 0px 0px 20px 5px yellow;
+    }
+
+    50%{border-color: green;
+    box-shadow: 0px 0px 20px 5px green;
+    }
+
+    75%{border-color: blue;
+    box-shadow: 0px 0px 20px 5px blue;
+    }
+    100%{border-color: purple;
+    box-shadow: 0px 0px 20px 5px purple;
+    }
+
+    
 }
