--- a/React Js/secondproject/src/App.css
+++ b/React Js/secondproject/src/App.css
@@ -41,7 +41,7 @@
   color: #888;
 } */
 
-
+/* 
 .navbar{
   background-color: aqua;
   color: black;
@@ -61,4 +61,4 @@
   font-size: 20px;
   list-style: none;
   
-}
+} */
