--- a/React Js/state/src/App.css
+++ b/React Js/state/src/App.css
@@ -44,6 +44,10 @@
 
 button{
   margin-left: 10px;
+  padding: 10px;
+  border-radius: 12px;
+  background-color: green;
+  color: white;
   
 }
 h1{
