--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -633,255 +633,90 @@ a{
 /*---------------------
   Team Section
 -----------------------*/
-
 .team-section {
 	background: #151515;
-}
-
-.team-section.team-page {
-	padding-bottom: 70px;
-}
-
-.team-section.team-page .ts-item {
-	margin-bottom: 30px;
-}
-
-.team-section.team-page .ts-item:hover .ts_text {
-	bottom: -30px;
-}
-
-.team-section.team-page .ts-item .tt_social {
-	-webkit-transform: skewY(5deg);
-	-ms-transform: skewY(5deg);
-	transform: skewY(5deg);
-	margin-top: 13px;
-}
-
-.team-section.team-page .ts-item .tt_social a {
-	font-size: 14px;
-	color: #c4c4c4;
-	margin-right: 10px;
-}
-
-.team-section.team-page .ts-item .tt_social a:last-child {
-	margin-right: 0;
-}
-
-.team-title .section-title {
-	text-align: left;
-	float: left;
-}
-
-.primary-btn.appoinment-btn {
-	background: transparent;
-	border: 2px solid #f36100;
-	float: right;
-	margin-top: 10px;
-}
-
-.ts-slider .col-lg-4 {
-	max-width: 100%;
-}
-
-.ts-slider.owl-carousel .owl-dots {
-	text-align: center;
-	margin-top: 30px;
-}
-
-.ts-slider.owl-carousel .owl-dots button {
-	height: 4px;
-	width: 20px;
-	background: #5c5c5c;
-	margin-right: 15px;
-	-webkit-transform: skewY(-5deg);
-	-ms-transform: skewY(-5deg);
-	transform: skewY(-5deg);
-}
-
-.ts-slider.owl-carousel .owl-dots button.active {
-	background: #f36100;
-}
-
-.ts-slider.owl-carousel .owl-dots button:last-child {
-	margin-right: 0;
-}
-
-.ts-item {
-	height: 450px;
-	position: relative;
-	overflow: hidden;
-}
-
-.ts-item:hover .ts_text {
-	bottom: -35px;
-}
-
-.ts-item .ts_text {
-	padding: 40px 0 60px;
-	text-align: center;
-	background: #0a0a0a;
-	border-top: 4px solid #464646;
-	-webkit-transform: skewY(-5deg);
-	-ms-transform: skewY(-5deg);
-	transform: skewY(-5deg);
-	position: absolute;
-	left: 0;
-	bottom: -250px;
-	width: 100%;
-	-webkit-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
-.ts-item .ts_text h4 {
-	color: #ffffff;
-	font-weight: 600;
-	margin-bottom: 14px;
-	-webkit-transform: skewY(5deg);
-	-ms-transform: skewY(5deg);
-	transform: skewY(5deg);
-}
-
-.ts-item .ts_text span {
-	display: block;
-	font-size: 12px;
-	font-weight: 700;
-	color: #aaaaaa;
-	text-transform: uppercase;
-	-webkit-transform: skewY(5deg);
-	-ms-transform: skewY(5deg);
-	transform: skewY(5deg);
-}
-
-
-
-
-/*---------------------
-  Team Section
------------------------*/
-
-.team-section {
-	
-	background: #151515;
-}
-
-.team-section.team-page {
-	padding-bottom: 70px;
-}
-
-.team-section.team-page .ts-item {
-	margin-bottom: 30px;
-}
-
-.team-section.team-page .ts-item:hover .ts_text {
-	bottom: -30px;
-}
-
-.team-section.team-page .ts-item .tt_social {
-	-webkit-transform: skewY(5deg);
-	-ms-transform: skewY(5deg);
-	transform: skewY(5deg);
-	margin-top: 13px;
-}
-
-.team-section.team-page .ts-item .tt_social a {
-	font-size: 14px;
-	color: #c4c4c4;
-	margin-right: 10px;
-}
-
-.team-section.team-page .ts-item .tt_social a:last-child {
-	margin-right: 0;
-}
-
-.team-title .section-title {
-	text-align: left;
-	float: left;
-}
-
-.primary-btn.appoinment-btn {
-	background: transparent;
-	border: 2px solid #f36100;
-	float: right;
-	margin-top: 10px;
-}
-
-.ts-slider .col-lg-4 {
-	max-width: 100%;
-}
-
-.ts-slider.owl-carousel .owl-dots {
-	text-align: center;
-	margin-top: 30px;
-}
-
-.ts-slider.owl-carousel .owl-dots button {
-	height: 4px;
-	width: 20px;
-	background: #5c5c5c;
-	margin-right: 15px;
-	-webkit-transform: skewY(-5deg);
-	-ms-transform: skewY(-5deg);
-	transform: skewY(-5deg);
-}
-
-.ts-slider.owl-carousel .owl-dots button.active {
-	background: #f36100;
-}
-
-.ts-slider.owl-carousel .owl-dots button:last-child {
-	margin-right: 0;
-}
-
-.ts-item {
+	padding: 60px 0;
+  }
+  
+  .team-title {
 	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 40px;
+  }
+  
+  .section-title span {
+	color: #f36100;
+	font-weight: 600;
+	text-transform: uppercase;
+	display: block;
+  }
+  
+  .section-title h2 {
+	color: #fff;
+	font-size: 36px;
+	margin-top: 10px;
+  }
+  
+  .appoinment-btn {
+	background: transparent;
+	border: 2px solid #f36100;
+	padding: 10px 20px;
+	color: #f36100;
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: 0.3s;
+  }
+  
+  .appoinment-btn:hover {
+	background: #f36100;
+	color: #fff;
+  }
+  
+  .ts-slider .ts-item {
 	height: 450px;
+	background-size: cover;
+	background-position: center;
 	position: relative;
 	overflow: hidden;
-}
-
-.ts-item:hover .ts_text {
-	bottom: -35px;
-}
-
-.ts-item .ts_text {
+	margin: 0 10px;
+  }
+  
+  .ts_text {
+	position: absolute;
+	bottom: -250px;
+	left: 0;
+	width: 100%;
 	padding: 40px 0 60px;
-	text-align: center;
 	background: #0a0a0a;
 	border-top: 4px solid #464646;
-	-webkit-transform: skewY(-5deg);
-	-ms-transform: skewY(-5deg);
+	text-align: center;
 	transform: skewY(-5deg);
-	position: absolute;
-	left: 0;
-	bottom: -250px;
-	width: 100%;
-	-webkit-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
-.ts-item .ts_text h4 {
-	color: #ffffff;
+	transition: 0.3s;
+  }
+  
+  .ts-item:hover .ts_text {
+	bottom: -35px;
+  }
+  
+  .ts_text h4,
+  .ts_text span {
+	transform: skewY(5deg);
+  }
+  
+  .ts_text h4 {
+	color: #fff;
 	font-weight: 600;
 	margin-bottom: 14px;
-	-webkit-transform: skewY(5deg);
-	-ms-transform: skewY(5deg);
-	transform: skewY(5deg);
-}
-
-.ts-item .ts_text span {
-	display: block;
+  }
+  
+  .ts_text span {
+	color: #aaa;
 	font-size: 12px;
 	font-weight: 700;
-	color: #aaaaaa;
 	text-transform: uppercase;
-	-webkit-transform: skewY(5deg);
-	-ms-transform: skewY(5deg);
-	transform: skewY(5deg);
-}
-
-
+  }
+  
 /*---------------------
   Get Touch Section
 -----------------------*/
