--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -467,6 +467,11 @@ ol {
   Pricing Section
 -----------------------*/
 
+
+.popular-tag{
+	color:red;
+	font-weight: bold;
+}
 .pricing-section {
 	background: #151515;
 }
