--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -1565,6 +1565,7 @@ font-size: 35px;
 .contact-page {
 	font-family: 'Arial', sans-serif;
 	color: #333;
+	background-color: #000;
   }
   
   .container {
