--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -1655,7 +1655,7 @@ font-size: 35px;
 	max-width: 800px;
 	margin: 0 auto;
 	padding: 40px;
-	background: #f8f9fa;
+	background-color: #1d2327ba;
 	border-radius: 10px;
 	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
   }
@@ -1668,6 +1668,7 @@ font-size: 35px;
   
   .form-group {
 	flex: 1;
+	
   }
   
   .form-group input,
