--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -63,9 +63,9 @@
 	display: inline-block;
 	padding: 8px 16px;
 background: transparent;
-	color: white;
+	color: ;
 	text-decoration: none;
-	border: 2px solid orangered;
+	border: 2px solid white;
 	
 	border-radius: 22px;
 	font-weight: bold;
