--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -63,7 +63,7 @@
 	display: inline-block;
 	padding: 8px 16px;
 background: transparent;
-	color: ;
+	color: orangered;
 	text-decoration: none;
 	border: 2px solid white;
 	
@@ -74,7 +74,7 @@ background: transparent;
   
   .adm a:hover {
 	
-	color: red;
+	color: white;
   }
 
 
