--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -1796,7 +1796,7 @@ font-size: 35px;
 .login21-subtitle {
   margin-top: -10px;
   font-size: 14px;
-  color: #666;
+  color: red;
 }
 
 .login21-title {
