--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -1780,7 +1780,7 @@ font-size: 35px;
 .login21-form-section {
   flex: 1;
   padding: 40px;
-  background: linear-gradient(to bottom right, #dab00b, #e1bee7);
+  background: linear-gradient(to bottom right,  #e1bee7 , #dab00b);
 }
 
 .login21-logo {
@@ -1796,7 +1796,8 @@ font-size: 35px;
 .login21-subtitle {
   margin-top: -10px;
   font-size: 14px;
-  color: red;
+  color: #666;
+  font-weight: bold;
 }
 
 .login21-title {
