--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2050,7 +2050,7 @@ font-size: 35px;
  }
 
  .login-card27 {
-	  background: linear-gradient(135deg, #fff0e0, #ffd5b3);
+	  background: linear-gradient(135deg, #fff0e0, #f3750f);
 	  border-radius: 20px;
 	  padding: 40px 30px;
 	  width: 450px;
