--- a/React Js/Test/src/App.css
+++ b/React Js/Test/src/App.css
@@ -2182,7 +2182,7 @@ body {
   margin-bottom: 25px;
   font-size: 28px;
   font-weight: bold;
-  color: #ffffff;
+  color: #d76311;
 }
 
 .appoint-form44 {
